--- a/_sass/addon/telegram-banner.scss
+++ b/_sass/addon/telegram-banner.scss
@@ -1,4 +1,4 @@
-telegram-banner {
+.telegram-banner {
             background: linear-gradient(135deg, #00FFED 0%, #00B8BA 50%, #007acc 100%);
             border-radius: 16px;
             padding: 24px;
